Finalização do projeto
alterado cores, nomes das class e características.

--- a/index.html
+++ b/index.html
@@ -13,21 +13,29 @@
 
         </div>
         <div class="instagram-continue">
-            <div class="groud">
+            <div class="group">
                 <img src="./img/instagram-logo.png" class="instagram-loo" alt="instagram logo">
                 <div class="profile-photo">
                     <img src="./img/perfil-instagram.png" alt="foto do perfil instagram">
                 </div>
                 <a href="#" class="Instagram-login">Entre no jogo!</a>
-                <a href="#" class="Instagram logout">Remover conta</a>
+                <a href="#" class="Instagram-logout">Remover conta</a>
             </div>
+
             <div class="group">
                 <p class="not-account">Não é Erikles?</p>
                 <p class="notaccount">
                     <span class="link-blue">Alternar contas</span>
-                    ou 
+                    ou
                     <span class="link-blue">Inscreva-se</span>
                 </p>
+            </div>
+            <div class="get-the-app">
+                <p class="get-app">Baixe o aplicatvo</p>
+                <div class="download">
+                    <a href="#" class="app-download"></a>
+                    <a href="#" class="app-download"></a>
+                </div>
             </div>
 
         </div>
